--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
-    "mongoose": "^5.9.5"
+    "mongoose": "^5.9.5",
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "expect": "^25.1.0",
+    "mocha": "^7.1.1",
+    "supertest": "^4.0.2"
   }
 }
