--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "",
   "license": "ISC",
@@ -13,12 +13,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
-    "mongoose": "^5.9.5",
-    "nodemon": "^2.0.2"
+    "mongoose": "^5.9.5"
   },
   "devDependencies": {
     "expect": "^25.1.0",
     "mocha": "^7.1.1",
+    "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
 }
