--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5"
   },
